--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ jsons==1.6.3
 ruamel.yaml==0.17.21
 setuptools==49.2.1
 autopep8==2.0.1     # Autoformatter
+tomli==2.0.1
 
 # Zrb dev dependencies (should be copied to `pyproject.toml`)
 flake8==6.0.0       # Linter
