--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/requirements.txt
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/requirements.txt
@@ -1,22 +1,24 @@
-SQLAlchemy==2.0.9
-aiormq==6.7.3
-aiokafka==0.8.0
-alembic==1.10.3
+SQLAlchemy==2.0.18
+aiormq==6.7.6
+aiokafka==0.8.1
+alembic==1.11.1
 bcrypt==4.0.1
-fastapi==0.95.0
+fastapi==0.100.0
 jsons==1.6.3
-pydantic==1.10.6
+pydantic==1.10.9
 psycopg2-binary==2.9.6
 python-jose==3.3.0
-uvicorn==0.20.0
+uvicorn==0.22.0
 watchfiles==0.19.0
 python-multipart==0.0.6
 python-ulid==1.1.0
-prometheus-fastapi-instrumentator==6.0.0
+opentelemetry-distro==0.39b0
+opentelemetry-exporter-otlp==1.18.0
+opentelemetry-instrumentation-fastapi==0.39b0
 
 # for testing
-pytest==7.2.1
-pytest-cov==4.0.0
+pytest==7.4.0
+pytest-cov==4.1.0
 pytest-asyncio==0.21.0
-httpx==0.24.0
+httpx==0.24.1
 asgi-lifespan==2.1.0
