--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.yml
@@ -111,127 +111,189 @@ services:
 
 
   #############################################################################
-  # Monitoring (see: https://github.com/livingdocsIO/monitoring)
+  # Monitoring
   #############################################################################
 
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.45.0
-    container_name: snake_app_name_cadvisor
-    hostname: cadvisor
-    restart: unless-stopped
+  zookeeper-1:
+    image: bitnami/zookeeper:3.7.1
+    container_name: snake_app_name_zookeeper_1
+    hostname: zookeeper-1
+    restart: on-failure
     profiles:
     - monitoring
-    command: --docker_only=true --store_container_labels=false
-    ports: ["9081:8080"]
+    user: root
+    ports:
+    - "2181:2181"
+    - "2888:2888"
+    - "3888:3888"
     volumes:
-    - /:/rootfs:ro
-    - /var/run:/var/run:rw
-    - /sys:/sys:ro
-    - /var/lib/docker/:/var/lib/docker:ro
-    - /dev/disk/:/dev/disk:ro
-    networks:
-    - zrb
-    privileged: true
-
-  grafana:
-    image: grafana/grafana:8.3.2
-    container_name: snake_app_name_grafana
-    hostname: grafana
-    restart: unless-stopped
-    profiles:
-    - monitoring
-    ports: ["3000:3000"]
-    volumes:
-    - ./monitoring/grafana/datasource.yaml:/etc/grafana/provisioning/datasources/monitoring.yaml
-    - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
-    networks:
-    - zrb
-    # user: "1000:1000"
-
-  jaeger:
-    image: jaegertracing/all-in-one:1.30.0
-    container_name: snake_app_name_jaeger
-    hostname: jaeger
-    restart: unless-stopped
-    profiles:
-    - monitoring
-    # ports: ["6831:6831/udp", "6832:6832/udp", "14250:14250", "14269:14269", "16686:16686"]
-    ports: ["6831:6831/udp", "6832:6832/udp"]
-    networks:
-    - zrb
-    mem_limit: 512m
+    - ./data/zookeeper-1:/bitnami/zookeeper
     environment:
-    - SPAN_STORAGE_TYPE=badger
-    - BADGER_EPHEMERAL=false
-    - BADGER_DIRECTORY_KEY=/badger/key
-    - BADGER_DIRECTORY_VALUE=/badger/data
-    - BADGER_SPAN_STORE_TTL=168h0m0s
-    # user: "1000:1000"
+    - ZOO_SERVER_ID=1
+    # - ZOO_SERVERS=0.0.0.0:2888:3888,zookeeper-2:2888:3888,zookeeper-3:2888:3888
+    - ALLOW_ANONYMOUS_LOGIN=yes
+    - ZOO_AUTOPURGE_INTERVAL=1
 
-  loki:
-    image: grafana/loki:2.4.1
-    container_name: snake_app_name_loki
-    hostname: loki
-    restart: unless-stopped
+
+  clickhouse:
+    image: clickhouse/clickhouse-server:22.8.8-alpine
+    container_name: snake_app_name_clickhouse
+    hostname: clickhouse
+    restart: on-failure
     profiles:
     - monitoring
-    ports: ["3100:3100"]
-    mem_limit: 512m
+    tty: true
+    depends_on:
+    - zookeeper-1
+    # - zookeeper-2
+    # - zookeeper-3
+    logging:
+      options:
+        max-size: 50m
+        max-file: "3"
+    healthcheck:
+      # "clickhouse", "client", "-u ${CLICKHOUSE_USER}", "--password ${CLICKHOUSE_PASSWORD}", "-q 'SELECT 1'"
+      test: ["CMD", "wget", "--spider", "-q", "localhost:8123/ping"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 262144
+        hard: 262144
+    ports:
+    - "9000:9000"
+    - "8123:8123"
+    - "9181:9181"
     volumes:
-    - ./monitoring/loki/loki.yaml:/etc/loki/local-config.yaml
-    - /var/log:/var/log:ro
-    networks:
-    - zrb
-    # user: "1000:1000"
+    - ./clickhouse-config.xml:/etc/clickhouse-server/config.xml
+    - ./clickhouse-users.xml:/etc/clickhouse-server/users.xml
+    - ./custom-function.xml:/etc/clickhouse-server/custom-function.xml
+    - ./clickhouse-cluster.xml:/etc/clickhouse-server/config.d/cluster.xml
+    - ./data/clickhouse/:/var/lib/clickhouse/
+    - ./user_scripts:/var/lib/clickhouse/user_scripts/
 
-  opentelemetry-collector:
-    image: otel/opentelemetry-collector:0.58.0
-    container_name: snake_app_name_opentelemetry_collector
-    hostname: opentelemetry-collector
-    restart: unless-stopped
+
+  alertmanager:
+    image: signoz/alertmanager:${ALERTMANAGER_TAG:-0.23.1}
+    container_name: snake_app_name_alertmanager
+    hostname: alertmanager
+    restart: on-failure
     profiles:
     - monitoring
-    command: --config=/conf/otel-collector.config.yaml
-    # ports: ["9464:9464", "55680:55680", "55681:55681"]
-    ports: ["9464:9464"]
     volumes:
-    - ./monitoring/otel/otel-collector.yaml:/conf/otel-collector.config.yaml
-    networks:
-    - zrb
+    - ./data/alertmanager:/data
+    depends_on:
+      query-service:
+        condition: service_healthy
+    command:
+    - --queryService.url=http://query-service:8085
+    - --storage.path=/data
 
-  prometheus:
-    image: prom/prometheus:v2.31.2
-    container_name: snake_app_name_prometheus
-    hostname: prometheus
-    restart: unless-stopped
+
+  query-service:
+    image: signoz/query-service:${DOCKER_TAG:-0.22.0}
+    container_name: snake_app_name_query_service
+    hostname: query-service
+    restart: on-failure
     profiles:
     - monitoring
-    command: --config.file=/etc/prometheus/prometheus.yaml --web.route-prefix=/ --storage.tsdb.path=/prometheus --storage.tsdb.retention.time=30d --web.enable-lifecycle --web.enable-admin-api
-    ports: ["9090:9090"]
+    command: ["-config=/root/config/prometheus.yml"]
+    # ports:
+    #   - "6060:6060"     # pprof port
+    #   - "8080:8080"     # query-service port
     volumes:
-    - ./monitoring/prometheus/prometheus.yaml:/etc/prometheus/prometheus.yaml
-    networks:
-    - zrb
-    # user: "1000:1000"
-    mem_limit: 512m
+    - ./prometheus.yml:/root/config/prometheus.yml
+    - ../dashboards:/root/config/dashboards
+    - ./data/signoz/:/var/lib/signoz/
+    environment:
+    - ClickHouseUrl=tcp://clickhouse:9000/?database=signoz_traces
+    - ALERTMANAGER_API_PREFIX=http://alertmanager:9093/api/
+    - SIGNOZ_LOCAL_DB_PATH=/var/lib/signoz/signoz.db
+    - DASHBOARDS_PATH=/root/config/dashboards
+    - STORAGE=clickhouse
+    - GODEBUG=netdns=go
+    - TELEMETRY_ENABLED=true
+    - DEPLOYMENT_TYPE=docker-standalone-amd
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "localhost:8080/api/v1/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+    depends_on:
+      clickhouse:
+        condition: service_healthy
 
-  vector:
-    image: timberio/vector:0.23.3-alpine
-    container_name: snake_app_name_vector
-    hostname: vector
-    restart: unless-stopped
+
+  frontend:
+    image: signoz/frontend:${DOCKER_TAG:-0.22.0}
+    container_name: snake_app_name_frontend
+    hostname: frontend
+    restart: on-failure
     profiles:
     - monitoring
-    ports: ["8383:8383", "8686:8686", "9160:9160", "4545:4545/udp"]
+    depends_on:
+    - alertmanager
+    - query-service
+    ports:
+    - "3301:3301"
     volumes:
-    - ./monitoring/vector/vector.toml:/etc/vector/vector.toml
-    - /var/run/docker.sock:/var/run/docker.sock:ro
-    networks:
-    - zrb
-    depends_on: [loki, prometheus]
-    mem_limit: 100m
-    # environment:
-      # - VECTOR_LOG=debug
+    - ./monitoring/frontend/nginx-config.conf:/etc/nginx/conf.d/default.conf
+
+
+  otel-collector:
+    image: signoz/signoz-otel-collector:${OTELCOL_TAG:-0.79.2}
+    container_name: snake_app_name_otel_collector
+    hostname: otel-collector
+    restart: on-failure
+    profiles:
+    - monitoring
+    command: ["--config=/etc/otel-collector-config.yaml", "--feature-gates=-pkg.translator.prometheus.NormalizeName"]
+    user: root # required for reading docker container logs
+    volumes:
+    - ./monitoring/otel-collector/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    - /var/lib/docker/containers:/var/lib/docker/containers:ro
+    environment:
+    - OTEL_RESOURCE_ATTRIBUTES=host.name=signoz-host,os.type=linux
+    - DOCKER_MULTI_NODE_CLUSTER=false
+    - LOW_CARDINAL_EXCEPTION_GROUPING=false
+    ports:
+    # - "1777:1777"     # pprof extension
+    - "4317:4317"     # OTLP gRPC receiver
+    - "4318:4318"     # OTLP HTTP receiver
+    # - "8888:8888"     # OtelCollector internal metrics
+    # - "8889:8889"     # signoz spanmetrics exposed by the agent
+    # - "9411:9411"     # Zipkin port
+    # - "13133:13133"   # health check extension
+    # - "14250:14250"   # Jaeger gRPC
+    # - "14268:14268"   # Jaeger thrift HTTP
+    # - "55678:55678"   # OpenCensus receiver
+    # - "55679:55679"   # zPages extension
+    depends_on:
+      clickhouse:
+        condition: service_healthy
+
+
+  otel-collector-metrics:
+    image: signoz/signoz-otel-collector:${OTELCOL_TAG:-0.79.2}
+    container_name: snake_app_name_otel_collector_metrics
+    hostname: otel_collector_metrics
+    restart: on-failure
+    profiles:
+    - monitoring
+    command: ["--config=/etc/otel-collector-metrics-config.yaml", "--feature-gates=-pkg.translator.prometheus.NormalizeName"]
+    volumes:
+      - ./otel-collector-metrics-config.yaml:/etc/otel-collector-metrics-config.yaml
+    # ports:
+    #   - "1777:1777"     # pprof extension
+    #   - "8888:8888"     # OtelCollector internal metrics
+    #   - "13133:13133"   # Health check extension
+    #   - "55679:55679"   # zPages extension
+    depends_on:
+      clickhouse:
+        condition: service_healthy
+
 
   #############################################################################
   # PascalAppName Monolith
