--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/src/template.env
@@ -5,6 +5,9 @@ APP_PORT=httpPort
 APP_RELOAD=true
 APP_MAX_NOT_READY=10
 
+APP_ENABLE_OTEL=false
+APP_OTEL_EXPORTER_OLTP_ENDPOINT=http://localhost:4317
+
 PUBLIC_BRAND=PascalAppName
 PUBLIC_TITLE=PascalAppName
 PUBLIC_AUTH_ACCESS_TOKEN_COOKIE_KEY=access_token
