--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/template.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/template.env
@@ -1,4 +1,5 @@
 MODE=monolith
+ENABLE_MONITORING=1
 NAMESPACE=default
 BROKER_TYPE=
 
@@ -14,6 +15,10 @@ POSTGRESQL_AUTH_POSTGRES_PASSWORD=Alch3mist
 POSTGRESQL_AUTH_USERNAME=root
 POSTGRESQL_AUTH_PASSWORD=Alch3mist
 POSTGRESQL_DB=snake_app_name
+
+SIGNOZ_CLICKHOUSE_NAMESPACE=
+SIGNOZ_CLICKHOUSE_USER=admin
+SIGNOZ_CLICKHOUSE_PASSWORD=Alch3mist
 
 REPLICA=1
 REPLICA_GATEWAY=1
