--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.env
@@ -34,10 +34,10 @@ OTEL_COLLECTOR_GRPC_HOST_PORT=4317
 OTEL_COLLECTOR_HTTP_HOST_PORT=4318
 
 APP_BROKER_TYPE=rabbitmq
-APP_PORT=httpPort
-APP_HOST_PORT=httpPort
-APP_GATEWAY_PORT=httpPort
-APP_GATEWAY_HOST_PORT=httpPort
+APP_PORT=appHttpPort
+APP_HOST_PORT=appHttpPort
+APP_GATEWAY_PORT=appHttpPort
+APP_GATEWAY_HOST_PORT=appHttpPort
 APP_AUTH_HOST_MODULE_PORT=httpAuthPort
 APP_AUTH_MODULE_PORT=httpAuthPort
 APP_LOG_HOST_MODULE_PORT=httpLogPort
