--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/helm-charts/signoz/charts/clickhouse/templates/clickhouse-operator/role.yaml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/helm-charts/signoz/charts/clickhouse/templates/clickhouse-operator/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: {{ include "clickhouseOperator.fullname" . }}-{{ include "clickhouse.namespace" . }}
+  name: {{ include "clickhouseOperator.fullname" . }}
   namespace: {{ include "clickhouse.namespace" . }}
   labels:
     {{- include "clickhouseOperator.labels" . | nindent 4 }}
