--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/helm-charts/signoz/charts/clickhouse/templates/clickhouse-operator/rolebinding.yaml
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/deployment/helm-charts/signoz/charts/clickhouse/templates/clickhouse-operator/rolebinding.yaml
@@ -1,16 +1,15 @@
-# Setup ClusterRoleBinding between ClusterRole and ServiceAccount.
-# ClusterRoleBinding is namespace-less and must have unique name
+# Setup RoleBinding between Role and ServiceAccount.
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: {{ include "clickhouseOperator.fullname" . }}-{{ include "clickhouse.namespace" . }}
+  name: {{ include "clickhouseOperator.fullname" . }}
   namespace: {{ include "clickhouse.namespace" . }}
   labels:
     {{- include "clickhouseOperator.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ include "clickhouseOperator.fullname" . }}-{{ include "clickhouse.namespace" . }}
+  kind: Role
+  name: {{ include "clickhouseOperator.fullname" . }}
 subjects:
 - kind: ServiceAccount
   {{- if .Values.clickhouseOperator.serviceAccount.create }}
