--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.env
@@ -1,5 +1,7 @@
 # Docker compose specific environments (not per service environment)
 
+CONTAINER_PREFIX=my
+
 RABBITMQ_HOST_PORT=5672
 RABBITMQ_MANAGEMENT_HOST_PORT=15672
 RABBITMQ_DEFAULT_USER=guest
