--- a/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
+++ b/src/zrb/builtin/generator/simple_python_app/template/src/kebab-app-name/docker-compose.yml
@@ -6,8 +6,8 @@ services:
   snake_app_name:
     build: src
     image: ${IMAGE:-kebab-app-name}
-    container_name: snake_app_name
-    hostname: snake_app_name
+    container_name: ${CONTAINER_PREFIX:-my}-kebab-app-name
+    hostname: kebab-app-name
     ports:
     - "${HOST_PORT:-8080}:${APP_PORT:-8080}"
     restart: unless-stopped
