WIP: update zrb

--- a/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.env
+++ b/src/zrb/builtin/generator/fastapp/template/src/kebab-app-name/docker-compose.env
@@ -1,4 +1,5 @@
-# Docker compose specific environments (not per service environment)
+# Docker compose file environments
+# Check `docker-compose-app.env` and `src/template.env` for kebab-app-name service environments
 
 CONTAINER_PREFIX=my
 
